<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zalego</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="please_fill_your_details_below">Please fill your details Below</string>
    <string name="user_details">User Details</string>
    <string name="your_username">Your Username</string>
    <string name="last_name_">Last Name:</string>
    <string name="password_">Password:</string>

</resources>
