<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/user_details"
        android:textColor="#00f02e" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:gravity="left"
                android:maxLength="12"
                android:padding="16sp"
                android:text="@string/your_username"
                android:textColor="#a2a1b8"
                 />

            <TextView
                android:id="@+id/usernameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="right"
                android:maxLength="120"
                android:padding="16sp"
                android:textColor="#181737"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="#dad8d8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/emil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="left"
                android:maxLength="12"
                android:padding="16sp"
                android:text="First Name"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/firstnameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="right"
                android:maxLength="300"
                android:padding="16sp"
                android:textColor="#181737"
                android:textSize="16sp" />

        </LinearLayout>
          <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="#dad8d8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="left"
                android:maxLength="12"
                android:padding="16sp"
                android:text="@string/last_name_"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lnameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="right"
                android:maxLength="300"
                android:padding="16sp"
                android:textColor="#181737"
                android:textSize="16sp" />

        </LinearLayout>
          <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="#dad8d8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="left"
                android:maxLength="12"
                android:padding="16sp"
                android:text="@string/password_"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/passwordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="right"
                android:maxLength="300"
                android:padding="16sp"
                android:textColor="#181737"
                android:textSize="16sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="#dad8d8" />
    </LinearLayout>

</RelativeLayout>